Fix extra space

--- a/frontend/src/components/session/session.css
+++ b/frontend/src/components/session/session.css
@@ -89,7 +89,7 @@ a {
 }
 
 .filler {
-    height: 550px;
+    height: 100px;
 }
 
 .shopping-photo {
